--- a/play.html
+++ b/play.html
@@ -284,6 +284,27 @@ function objectUpdateAnimation(obj) {
 	}
 }
 
+function useObject(obj) {
+	// todo: check if you can use it
+
+	if(obj._script && obj._script.use_p_proc !== undefined) {
+		obj._script.source_obj = player
+		obj._script.self_obj = obj
+		obj._script.use_p_proc()
+	}
+
+	// todo: check script overrides
+	// also check object type
+	objectSingleAnim(obj)
+
+	if(obj.art.indexOf("door") !== -1 || obj.art.indexOf("locker") !== -1) {
+		// open/closable doors/containers
+		if(!obj.open) obj.open = true
+		else obj.open = false
+		objectSingleAnim(obj, !obj.open)
+	}	
+}
+
 // Draws a line between a and b, returning the first object hit
 function hexLinecast(a, b) {
 	var line = hexLine(a, b)
@@ -611,6 +632,12 @@ heart.keydown = function(k) {
 
 			drawInventory($("#inventory"), obj)
 		}
+	}
+
+	if(k == 'u') {
+		var obj = objectsAtPosition(mouseHex)[0]
+		if(obj !== undefined)
+			useObject(obj)
 	}
 }
 
