--- a/play.html
+++ b/play.html
@@ -51,6 +51,7 @@ var doLoadScripts = true // should we load scripts?
 var doUpdateCritters = false // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
 var doCombat = false // allow combat?
+var doUseWeaponModel = false // use weapon model for NPC models?
 var doLoadItemInfo = true // load item information (such as inventory images)?
 
 var gameTickTime = 0 // in Fallout 2 ticks (elapsed seconds * 10)
