hack player walk/run so it doesn't drive me crazy

--- a/play.html
+++ b/play.html
@@ -506,6 +506,8 @@ function loadMap(mapName) {
 	}, "json")
 
 	// load some testing art
+	load("art/critters/hmjmpsat")
+	
 	load("art/critters/navgulij")
 	load("art/critters/navgulia")
 	load("art/critters/navgulab")
