--- a/play.html
+++ b/play.html
@@ -303,12 +303,15 @@ function useObject(obj) {
 		obj._script.self_obj = obj
 		obj._script.use_p_proc()
 	}
+	else if(obj.script !== undefined && !obj._script)
+		console.log("object used has script but is not loaded: " + obj.script)
 
 	// todo: check script overrides
 	// also check object type
 	objectSingleAnim(obj)
 
-	if(obj.art.indexOf("door") !== -1 || obj.art.indexOf("locker") !== -1) {
+	if((obj.type === "scenery" && obj.subtype === "door") ||
+		obj.art.indexOf("door") !== -1 || obj.art.indexOf("locker") !== -1) {
 		// open/closable doors/containers
 		if(!obj.open) obj.open = true
 		else obj.open = false
@@ -400,6 +403,16 @@ function initObjects(objects) {
 			var invPID = obj.pro.extra.invFRM & 0xffff
 			if(invPID !== 0xffff)
 				obj.invArt = "art/inven/" + getLstId("art/inven/inven", invPID).split('.')[0]
+		}
+		else if(obj.type === "scenery") {
+			obj.pro = loadPRO(obj.pid, obj.pidID)
+			if(obj.pro === null) continue
+			var subtypeMap = {0: "door", 1: "stairs", 2: "elevator", 3: "ladder",
+							  4: "ladder", 5: "generic"}
+			obj.subtype = subtypeMap[obj.pro.extra.subType]
+
+			if(obj.subtype === "door")
+				obj.open = false
 		}
 	}
 }
