--- a/play.html
+++ b/play.html
@@ -318,10 +318,23 @@ function useObject(obj) {
 		if(!obj.open) obj.open = true
 		else obj.open = false
 		objectSingleAnim(obj, !obj.open)
-	}	
+	}
+	else if(obj.type === "scenery" && obj.subtype === "stairs") {
+		if(obj.extra.destinationMap === -1 && obj.extra.destination !== -1) {
+			// same map, new destination
+			var destTile = fromTileNum(obj.extra.destination & 0xffff)
+			var destElev = ((obj.extra.destination >> 28) & 0xf) >> 1
+
+			console.log("stairs: tile: " + destTile.x + ", " + destTile.y + ", elev: " + destElev)
+
+			changeElevation(destElev)
+			player.position = destTile
+		}
+	}
 }
 
 function objectBlocks(obj) {
+	if(obj.type === "misc") return false
 	if(!obj.pro) return true
 	if(obj.open !== undefined) return !obj.open
 
